To make theme size depend on DPI

Summary:
BUG: 389826

Added logicalDpi property to use for scaling UI elements size in Theme.qml

Reviewers: #elisa, astippich

Reviewed By: astippich

Subscribers: astippich, asn, mgallien

Tags: #elisa

Maniphest Tasks: T7530

Differential Revision: https://phabricator.kde.org/D10460